Fixed compile issue on jdk 9+